--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Scripts I'm writing to set up Arch on my machines faster, following the wiki.
 
 In its current form, these scripts
+-install pkgstats
+-activate reflector with default settings
 -will install in spanish (MX) and a latin-america kb layout
 -asume an Intel processor
 --install amber-mesa
