--- a/README
+++ b/README
@@ -17,3 +17,5 @@ They will not
 -configure sudoers.conf automatically
 -enable additional repos
 -set up nvidia or amd gpu drivers
+
+Use at your own risk.
