--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Scripts I'm writing to set up Arch on my machines faster, following the wiki.
 
 In its current form, these scripts
+-instal zen-kernel
 -install pkgstats
 -activate reflector with default settings
 -will install in spanish (MX) and a latin-america kb layout
