--- a/README
+++ b/README
@@ -11,6 +11,7 @@ In its current form, these scripts
 -set up a 2GiB swap space
 -install pipewire
 -activate bootctl auto-upodate (i.e. require disabling SecureBoot)
+-disabe hibernation
 
 They will not
 -allow dual booting (at least not using the same physical disk)
