--- a/README
+++ b/README
@@ -12,6 +12,7 @@ In its current form, these scripts
 -install pipewire
 -activate bootctl auto-upodate (i.e. require disabling SecureBoot)
 -disabe hibernation
+-activate modprobed-db
 
 They will not
 -allow dual booting (at least not using the same physical disk)
